package at.htl.entity;

public enum Status {
    IN_BEARBEITUNG,
    ZUSAGE,
    ABSAGE
}
